# opengl-cmake-base

./: .gitignore  CMakeLists.txt
src/: main.c
